Using mvvm architecture, the process of bringing categories and artists from firebase, registering them to the room and displaying them in the fragment was successfully realised.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="back_to_previous_song">Back to previous song</string>
     <string name="play_pause">Play/Pause</string>
     <string name="next_song">Next song</string>
+    <string name="categories">Categories</string>
+    <string name="music">Music</string>
 </resources>
