--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="next_song">Next song</string>
     <string name="categories">Categories</string>
     <string name="music">Music</string>
+    <string name="music_image">Music image</string>
 </resources>
